# genomic-variant-parser

./: .gitignore  README.md  pyproject.toml
data/: example.vcf
src/: parser.py
tests/: test_parser.py
