[project]
name = "genomic-variant-parser"
version = "0.1.0"
description = "VCF parsing and summarization utility for genomics workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas==3.0.1",
]

[project.scripts]
genomic-variant-parser = "src.parser:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
